add license and readme.md

--- a/src/views/login.twig
+++ b/src/views/login.twig
@@ -6,7 +6,7 @@
       <h1>Login</h1>
       <hr/>
     </div>
-    <form action="" method="POST">
+    <form class="uk-panel uk-panel-box uk-form" action="" method="POST">
     {{ form_widget(formView) }}
     </form>
   </div>
